[project]
name = "datatypesoptimizer"
version = "0.1.2"
description = "A robost data type optimizer for pandas dataframe"
readme = "README.md"
authors = [
    { name = "RAGHAVVRAM JOHNSON", email = "raghavvram.johnson@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
]

license = "MIT License"

[project.scripts]
datatypesoptimizer = "datatypesoptimizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
